# rosbag_fancy

./: .editorconfig  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  rqt_plugins.xml
.github/workflows/: build.yml
env-hooks/: 50-rosbag_fancy.bash
gui/: CMakeLists.txt  fancy_gui.cpp  fancy_gui.h  fancy_gui.ui  topic_model.cpp  topic_model.h
msg/: TopicStatus.msg
rosbag_fancy/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag_fancy/env-hooks/: 50-rosbag_fancy.bash
rosbag_fancy/scripts/: play.tape  record_gif.sh  record_svg.sh
rosbag_fancy/src/: bag_reader.cpp  bag_reader.h  bag_view.cpp  bag_view.h  bag_writer.cpp  bag_writer.h  cmd_info.cpp  cmd_play.cpp  cmd_record.cpp  cmd_test.cpp  doctest.cpp  main.cpp  mem_str.cpp  mem_str.h  message_queue.cpp  terminal.cpp  terminal.h  tf2_scanner.cpp  tf2_scanner.h  topic_manager.h  topic_subscriber.h  ui.cpp  ui.h
rosbag_fancy/tools/: tf2_republisher.cpp
rosbag_fancy_gui/: CMakeLists.txt  package.xml  rqt_plugins.xml
rosbag_fancy_gui/src/: fancy_gui.cpp  fancy_gui.h  topic_model.cpp  topic_model.h
rosbag_fancy_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag_fancy_msgs/msg/: PlayStatus.msg  PlayTopicStatus.msg  Status.msg  StatusPlay.msg
rqt_rosbag_fancy/: CHANGELOG.rst  CMakeLists.txt  package.xml  rqt_plugins.xml
rqt_rosbag_fancy/src/: fancy_gui.cpp  fancy_gui.h  topic_model.cpp  topic_model.h
src/: bag_reader.cpp  bag_reader.h  bag_writer.cpp  bag_writer.h  main.cpp  message_queue.cpp  message_queue.h  terminal.h  topic_manager.cpp  topic_manager.h  topic_subscriber.cpp  ui.cpp  ui.h
