<package format="2">
	<name>rosbag_fancy</name>
	<description>rosbag with terminal UI</description>
	<version>0.2.0</version>
	<license>BSD</license>
	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>boost</depend>
	<depend>libncurses-dev</depend>
    <depend>message_generation</depend>
	<depend>rosbag_storage</depend>
	<depend>roscpp</depend>
	<depend>rosfmt</depend>
    <depend>std_msgs</depend>
	<depend>tf2_ros</depend>
	<depend>topic_tools</depend>
</package>
